Update GUI library